--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -218,6 +218,7 @@
 	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 	  ga('create', 'UA-48456936-1', 'yhan-lab8.herokuapp.com');
+	  //ga('create', 'UA-48456936-1', {'cookieDomain':'none'});
 	  ga('send', 'pageview');
 	</script>
 </body>
